created html framework

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pet Adoption</title>
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <script src="main.js"></script>
+    <main></main>
+    <div id="pets" class="pets">
+      <div id="cats" class="cats"></div>
+      <div id="dinos" class="dinos"></div>
+      <div id="dogs" class="dogs"></div>
+    </div>
   </body>
 </html>
