created functions to push objects into DOM

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <main>
+      <div id="pets" class="pets">
+        <div id="cats" class="cats"></div>
+        <div id="dinos" class="dinos"></div>
+        <div id="dogs" class="dogs"></div>
+      </div>
+    </main>
     <script src="main.js"></script>
-    <main></main>
-    <div id="pets" class="pets">
-      <div id="cats" class="cats"></div>
-      <div id="dinos" class="dinos"></div>
-      <div id="dogs" class="dogs"></div>
-    </div>
   </body>
 </html>
