--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <main>
+      <div class="buttons">
+        <a href="#" class="catButton">Cat</a>
+        <a href="#" class="dogButton">Dog</a>
+        <a href="#" class="dinoButton">Dino</a>
+        <a href="#" class="allButton">All</a>
+      </div>
       <div id="pets" class="pets">
         <div id="cats" class="cats"></div>
         <div id="dinos" class="dinos"></div>
