started logic for filtering images using event listeners

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <main>
       <div class="buttons">
-        <a href="#" class="catButton">Cat</a>
-        <a href="#" class="dogButton">Dog</a>
-        <a href="#" class="dinoButton">Dino</a>
-        <a href="#" class="allButton">All</a>
+        <a href="#" id="catButton" class="catButton">Cat</a>
+        <a href="#" id="dogButton" class="dogButton">Dog</a>
+        <a href="#" id="dinoButton" class="dinoButton">Dino</a>
+        <a href="#" id="allButton" class="allButton">All</a>
       </div>
       <div id="pets" class="pets">
         <div id="cats" class="cats"></div>
