update jumbotron styling

--- a/index.html
+++ b/index.html
@@ -9,23 +9,14 @@
   <body>
     <header>
       <!-- As a heading -->
-      <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Pet Adoption</span>
-      </nav>
     </header>
     <main>
       <div class="jumbotron">
-        <h1 class="display-4">Hello, world!</h1>
+        <h1 class="display-4">Pet Adoption</h1>
         <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
+          Adopt your pets here! We have cute cats, playful pooches, and darling
+          dinos!
         </p>
-        <hr class="my-4" />
-        <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
-        </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
       </div>
       <div class="buttons">
         <a href="#" id="catButton" class="catButton">Cat</a>
