--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Adoption</title>
     <link rel="stylesheet" href="main.css" />
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+    crossorigin="anonymous"
+  />
   </head>
   <body>
     <header>
@@ -16,23 +22,18 @@
     <main>
       <div class="jumbotron">
         <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
-        </p>
-        <hr class="my-4" />
-        <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
-        </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <p class="lead">Welcome to my pet adoption site. </p>
+        <hr class="my-4">
+        <p>Feel free to browse our wide variety of cats, dogs, and dinos.</p>
+        <div class="buttons">
+          <a href="#" id="catButton" class="catButton">Cat</a>
+          <a href="#" id="dogButton" class="dogButton">Dog</a>
+          <a href="#" id="dinoButton" class="dinoButton">Dino</a>
+          <a href="#" id="allButton" class="allButton">All</a>
+        </div>
       </div>
-      <div class="buttons">
-        <a href="#" id="catButton" class="catButton">Cat</a>
-        <a href="#" id="dogButton" class="dogButton">Dog</a>
-        <a href="#" id="dinoButton" class="dinoButton">Dino</a>
-        <a href="#" id="allButton" class="allButton">All</a>
-      </div>
+</div>
+
       <div id="pets" class="pets">
         <div id="cats" class="cats"></div>
         <div id="dinos" class="dinos"></div>
