added screenshot of website.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Pet Adoption</title>
     <link rel="stylesheet" href="main.css" />
     <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-    crossorigin="anonymous"
-  />
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>
@@ -22,8 +22,8 @@
     <main>
       <div class="jumbotron">
         <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">Welcome to my pet adoption site. </p>
-        <hr class="my-4">
+        <p class="lead">Welcome to my pet adoption site.</p>
+        <hr class="my-4" />
         <p>Feel free to browse our wide variety of cats, dogs, and dinos.</p>
         <div class="buttons">
           <a href="#" id="catButton" class="catButton">Cat</a>
@@ -32,8 +32,6 @@
           <a href="#" id="allButton" class="allButton">All</a>
         </div>
       </div>
-</div>
-
       <div id="pets" class="pets">
         <div id="cats" class="cats"></div>
         <div id="dinos" class="dinos"></div>
